# docsiphon

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  public-surface-ledger.yml  pull_request_template.md  release-body-v0.1.1.md  release-body-v0.1.2.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_site_compat.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-evidence.yml
design-system/: MASTER.md
docs/: README.md  _config.yml  distribution-packet-ledger.md  index.md  repo-map.md  roadmap.md  robots.txt  sitemap.xml
examples/: README.md  canvas-quickstart.toml  rag-corpus.toml  strict-audit.toml
public-skills/: README.md
public-skills/docsiphon-doc-corpus-operator/: README.md  SKILL.md  manifest.yaml
scripts/: check_contracts.py  check_repo_hygiene.py  clean_local_state.py  verify_instructure.sh
src/docsiphon/: cli.py  config.py  crawl.py  discovery.py  fetch.py  models.py  report.py  storage.py  utils.py
tests/: __init__.py  test_cli_fetch_one.py  test_cli_helpers.py  test_cli_misc.py  test_cli_profile_merge.py  test_cli_run.py  test_config_profile.py  test_crawl.py  test_crawl_more.py  test_discovery.py  test_discovery_more.py  test_e2e_cli.py  test_fetch.py  test_manifest.py  test_report.py  test_scripts.py  test_storage.py  test_utils.py
tests/utils/: server_utils.py
(+5 files in other folders)
